--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body class="bg-slate-100">
     <main class="mx-auto max-w-7xl h-screen">
       <div class="m-8">
-        <h1 class="text-3xl font-bold text-cyan-900">There is no JS here!</h1>
-        <h1 class="text-xl font-light text-cyan-700">Only ruby.wasm</h1>
+        <h1 class="text-3xl font-bold text-cyan-900">Mandelbrot tree</h1>
+        <h1 class="text-xl font-light text-cyan-700">Only with ruby.wasm</h1>
         <canvas id="canvas" width="800" height="600"></canvas>
       </div>
     </main>
