Increase canvas size

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <main class="container">
       <h1>💎 mandelbrot.rb</h1>
-      <canvas id="canvas" width="130" height="100"></canvas>
-      <p id="message">Processing ruby.wasm...</p>
+      <canvas id="canvas" width="260" height="200"></canvas>
+      <p id="message">Processing...</p>
     </main>
     <script type="text/ruby" src="./lib/mandelbrot/generator.rb"></script>
     <script type="text/ruby" src="./lib/mandelbrot/pixels.rb"></script>
